# eloquens

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  compile_commands.json  org.kde.eloquens.desktop  org.kde.eloquens.json  org.kde.eloquens.metainfo.xml
.reuse/: dep5
po/ar/: eloquens.po
po/ca/: eloquens.po
po/ca@valencia/: eloquens.po
po/cs/: eloquens.po
po/de/: eloquens.po
po/en_GB/: eloquens.po
po/eo/: eloquens.po
po/es/: eloquens.po
po/eu/: eloquens.po
po/fi/: eloquens.po
po/fr/: eloquens.po
po/ga/: eloquens.po
po/gl/: eloquens.po
po/he/: eloquens.po
po/hi/: eloquens.po
po/ia/: eloquens.po
po/is/: eloquens.po
po/it/: eloquens.po
po/ja/: eloquens.po
po/ka/: eloquens.po
po/ko/: eloquens.po
po/lt/: eloquens.po
po/lv/: eloquens.po
po/nl/: eloquens.po
po/nn/: eloquens.po
po/pl/: eloquens.po
po/pt/: eloquens.po
po/pt_BR/: eloquens.po
po/sa/: eloquens.po
po/sk/: eloquens.po
po/sl/: eloquens.po
po/sv/: eloquens.po
po/tr/: eloquens.po
po/ug/: eloquens.po
po/uk/: eloquens.po
po/zh_CN/: eloquens.po
po/zh_TW/: eloquens.po
src/: CMakeLists.txt  config.kcfg  config.kcfgc  controller.cpp  controller.h  main.cpp  resources.qrc
src/ui/: About.qml  GlobalMenu.qml  Main.qml  PageHeader.qml  Settings.qml  main.qml
